frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress

spec:
  tls:
    - hosts:
        - traineematch.space
      secretName: traineematch-front-tls

  ingressClassName: traefik
  rules:
    - host: traineematch.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
